--- a/index.html
+++ b/index.html
@@ -25,10 +25,18 @@ pear install g2/package_name-beta</code></pre>
                 <em>Receiving</em> updates via a <a href="http://gomboc.github.com/pear/feed.xml">feed</a>:
                 <pre><code>http://gomboc.github.com/pear/feed.xml</code></pre>
 
+                                    <h3>G2_Tool<small> - G2 Tool is extension to Zend_Tool.</small></h3>
+                    <p>G2 Tool is extension to Zend_Tool.</p>
+                    <table>
+                        <tr><th>Install command</th><td><strong>pear install g2/G2_Tool</strong></td></tr>
+                                                <tr><th>License</th><td>MIT</td></tr>
+                                                                        <tr><th>Maintainers</th><td>Draško Gomboc <small>(as lead)</small></td></tr>
+                                                <tr><th>Releases</th><td><a href="http://gomboc.github.com/pear/get/G2_Tool-0.1.0.tgz">0.1.0</a> <small>(beta)</small></td></tr>
+                    </table>
                             </div>
         </div>
         <div id="ft">
-            <p><small>The <em>gomboc.github.com/pear</em> PEAR Channel Server is proudly powered by <a href="http://pirum.sensiolabs.org/">Pirum</a> 1.0.4</small></p>
+            <p><small>The <em>gomboc.github.com/pear</em> PEAR Channel Server is proudly powered by <a href="http://pirum.sensiolabs.org/">Pirum</a> 1.1.4</small></p>
         </div>
     </div>
 </body>
