--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ pear install g2/package_name-beta</code></pre>
                         <tr><th>Install command</th><td><strong>pear install g2/G2_Tool</strong></td></tr>
                                                 <tr><th>License</th><td>MIT</td></tr>
                                                                         <tr><th>Maintainers</th><td>Draško Gomboc <small>(as lead)</small></td></tr>
-                                                <tr><th>Releases</th><td><a href="http://gomboc.github.com/pear/get/G2_Tool-0.1.0.tgz">0.1.0</a> <small>(beta)</small></td></tr>
+                                                <tr><th>Releases</th><td><a href="http://gomboc.github.com/pear/get/G2_Tool-1.0.0.tgz">1.0.0</a> <small>(stable)</small></td></tr>
                     </table>
                             </div>
         </div>
