--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@ pear install g2/package_name-beta</code></pre>
                 <em>Receiving</em> updates via a <a href="http://gomboc.github.com/pear/feed.xml">feed</a>:
                 <pre><code>http://gomboc.github.com/pear/feed.xml</code></pre>
 
+                                    <h3>G2_Autoloader<small> - Autoloader for G2 packages.</small></h3>
+                    <p>Autoloader for G2 packages.</p>
+                    <table>
+                        <tr><th>Install command</th><td><strong>pear install g2/G2_Autoloader</strong></td></tr>
+                                                <tr><th>License</th><td>MIT</td></tr>
+                                                                        <tr><th>Maintainers</th><td>Draško Gomboc <small>(as lead)</small></td></tr>
+                                                <tr><th>Releases</th><td><a href="http://gomboc.github.com/pear/get/G2_Autoloader-1.0.0.tgz">1.0.0</a> <small>(stable)</small></td></tr>
+                    </table>
                                     <h3>G2_Compressor<small> - G2 Compressor is YUI Compressor wrapper.</small></h3>
                     <p>G2 Compressor is YUI Compressor wrapper.</p>
                     <table>
